[package]
name        = "fsk441plus"
version     = "0.1.7"
edition     = "2021"
authors     = ["Roger Banks <GW4WND>"]
description = "FSK441+ Meteor Scatter Transceiver"
license     = "MIT"
repository  = "https://github.com/Nythbran23/FSK441-PLUS"

[[bin]]
name = "fsk441plus"
path = "src/fsk441rx/app.rs"

[dependencies]
anyhow       = "1"
chrono       = { version = "0.4", features = ["serde"] }
dirs         = "5"
cpal         = "0.15"
eframe       = { version = "0.29", features = ["default"] }
egui         = "0.29"
env_logger   = "0.11"
hound        = "3.5"
log          = "0.4"
num-complex  = "0.4"
regex        = "1"
rubato       = "0.15"
serialport   = "4"
rusqlite     = { version = "0.31", features = ["bundled"] }
rustfft      = "6"
tokio        = { version = "1", features = ["full"] }

[profile.release]
opt-level       = 3
lto             = true
codegen-units   = 1

[profile.dev]
opt-level       = 1
